--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "fastapi[standard]>=0.129.2",
+    "pytest>=9.0.2",
     "sqlmodel>=0.0.37",
 ]
