Test Cases Added

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,3 +9,18 @@ dependencies = [
     "pytest>=9.0.2",
     "sqlmodel>=0.0.37",
 ]
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
